modified storage-migration docs
Signed-off-by: Fazle Rabbi Sarker <fazlerabbi@appscode.com>